sandbox/output
StringCalculator.java:10: error: cannot find symbol
            numbers = input.subString(5);
                           ^
  symbol:   method subString(int)
  location: variable input of type String
1 error
